# auction-sim

./: .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  auction-web-ac15ae4e0cfce1bc.js  auction-web-ac15ae4e0cfce1bc_bg.wasm  auction-web-c7692e435e6dbedd.js  auction-web-c7692e435e6dbedd_bg.wasm  auction-web-f2cbae866094615b_bg.wasm  index.html  style-77375f2dc23afe77.css
.claude/agents/: auction-learning-designer.md  rust-systems-savant.md
.github/workflows/: deploy.yml
crates/auction-ai/: Cargo.toml
crates/auction-ai/src/: all_pay.rs  lib.rs  seller.rs  shading.rs  truthful.rs
crates/auction-core/: Cargo.toml
crates/auction-core/src/: bid.rs  bidder.rs  event.rs  item.rs  lib.rs  mechanism.rs  outcome.rs  package.rs  types.rs
crates/auction-core/tests/: all_pay.rs  combinatorial.rs  double.rs  dutch.rs  english.rs  sealed_bid.rs
crates/auction-education/: Cargo.toml
crates/auction-education/src/: lib.rs
crates/auction-engine/: Cargo.toml
crates/auction-engine/examples/: combinatorial_sim.rs  english_sim.rs
crates/auction-engine/src/: engine.rs
crates/auction-engine/tests/: integration.rs
crates/auction-tui/: Cargo.toml
crates/auction-tui/src/: app.rs  main.rs  terminal.rs
crates/auction-tui/src/screens/: auction.rs  debrief.rs  intro.rs  menu.rs  mod.rs
crates/auction-web/: Cargo.toml  Trunk.toml  index.html
crates/auction-web/assets/: style.css
crates/auction-web/src/: app.rs  main.rs
crates/auction-web/src/screens/: auction.rs  combinatorial.rs  debrief.rs  intro.rs  menu.rs  mod.rs
(+8 files in other folders)
